--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,33 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. 
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-orbs:
-  node: circleci/node@4.1
-  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
-  # See the orb's test job here: https://circleci.com/developer/orbs/orb/circleci/node#jobs-test
+jobs:
+  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
+  build-and-test:  
+    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
+    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # Be sure to update the Docker image tag below to openjdk version of your application.
+    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
+    docker:
+      - image: cimg/openjdk:11.0
+    steps:
+      # Checkout the code as the first step.
+      - checkout
+      # Use mvn clean and package as the standard maven build phase
+      - run:
+          name: Build
+          command: mvn -B -DskipTests clean package
+      # Then run your tests!
+      - run:
+          name: Test
+          command: mvn test
 
 workflows:
-  sample:
+  # Below is the definition of your workflow.
+  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
+  # CircleCI will run this workflow on every commit.
+  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  sample: 
     jobs:
-      - node/test:
-          matrix:
-            parameters:
-              version: ['15.1', 'lts', '12.21']
-          # For more information about matrix testing see the detailed blog post:
-          # https://circleci.com/blog/circleci-matrix-jobs/
-          # or the configuration reference:
-          # https://circleci.com/docs/2.0/configuration-reference/?section=reference#matrix-requires-version-21
+      - build-and-test
